# photosearch

./: app.py  load_images.py  pyproject.toml
photosearch/: db.py  facedetection.py  objectdetection.py
templates/: index.html
tests/: test_photosearch.py
